--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn-icons-png.flaticon.com/512/9356/9356230.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Tales</title>
   </head>
